Bug #2277 - Gradebook: Settings page not visible on openlab dev
Just needed to make some changes in how the $submenu and $menu globals are altered heading into
menu generation.

--- a/wp-content/plugins/openlab-gradebook/GradeBook.less
+++ b/wp-content/plugins/openlab-gradebook/GradeBook.less
@@ -33,6 +33,21 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+body {
+    &.toplevel_page_oplb_gradebook {
+        #adminmenu {
+            .menu-top.toplevel_page_oplb_gradebook {
+                .wp-first-item {
+                    a {
+                        color: #fff;
+                        font-weight: 600;
+                    }
+                }
+            }
+        }
+    }
+}
+
 .oplb-grdbk-check-mark-2:before {
     content: "\61";
 }
